# circuitdk

./: .gitignore  README.ja.md  README.md  pyproject.toml
.agents/project/: initial-release.md
docs/: api-reference.ja.md  api-reference.md  architecture.md  cli.md  development.md  getting-started.md  roadmap.md
examples/blinky/: README.md  circuit.py  circuitdk.toml
src/circuitdk/: __init__.py  cli.py  config.py  constructs.py  ir.py  lock.py  parts.py  patterns.py  project.py  rules.py  units.py
src/circuitdk/experimental/: __init__.py  patterns.py
src/circuitdk/protocols/: __init__.py  common.py  i2c.py  inference.py  spi.py  uart.py
src/circuitdk/targets/: __init__.py
src/circuitdk/targets/kicad/: cli_runner.py  document.py  planner.py
tests/: conftest.py  test_cli.py  test_cli_runner.py  test_conformance.py  test_constructs.py  test_examples.py  test_kicad_backend.py  test_lazy_loading.py  test_libraries.py  test_lock.py  test_protocols.py  test_system_kicad.py  test_units.py
tests/fixtures/kicad10/: empty.kicad_sch
